# python-project-52

./: .coverage  .env  Makefile  README.md  coverage.xml  db.sqlite3  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: tests_check.yml
locale/ru/LC_MESSAGES/: django.mo  django.po
task_manager/: settings.py  urls.py  views.py
task_manager/fixtures/: auth.json  label.json  label_data.json  status.json  status_data.json  task.json  task_data.json  user.json  user_data.json
task_manager/labels/: forms.py  models.py  tests.py  urls.py  views.py
task_manager/labels/migrations/: 0001_initial.py
task_manager/statuses/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
task_manager/statuses/migrations/: 0001_initial.py
task_manager/tasks/: admin.py  filter.py  forms.py  models.py  tests.py  urls.py  views.py
task_manager/tasks/migrations/: 0001_initial.py  0002_alter_tasks_author_alter_tasks_description_and_more.py  0003_taskslabels_tasks_labels.py  0004_alter_tasks_name.py
task_manager/templates/: base.html  index.html  login.html
task_manager/templates/labels/: create.html  delete.html  labels_list copy.html  labels_list.html  update.html
task_manager/templates/statuses/: create.html  delete.html  statuses_list.html  update.html
task_manager/templates/tasks/: create.html  delete.html  task_detail.html  tasks_list.html  update.html
task_manager/templates/users/: create.html  delete.html  update.html  user_list.html
task_manager/users/: forms.py  mixins.py  models.py  tests.py  urls.py  views.py
(+1 files in other folders)
