[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["Tata Pestova <tata.pestova@inbox.ru>"]
readme = "README.md"
packages = [{include = "hexlet_code"}]

[tool.poetry.dependencies]
python = "^3.8"
django = "^4.2.2"
load-dotenv = "^0.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
